--- a/src/templates/my_outputs.html
+++ b/src/templates/my_outputs.html
@@ -68,7 +68,7 @@
         </table>
 
         <h3>
-            Sum ETNX from matched outputs (i.e., incoming ETNX):
+            Sum GLDX from matched outputs (i.e., incoming GLDX):
             {{#found_our_outputs}}
                 {{sum_xmr}}
             {{/found_our_outputs}}
@@ -141,7 +141,7 @@
 
         </div>
         <h3>
-            Sum ETNX from matched and marked by * ring member's outputs: {{sum_mixin_xmr}}
+            Sum GLDX from matched and marked by * ring member's outputs: {{sum_mixin_xmr}}
             <br/>
             <span style="font-size: 16px"> Possible spending is:
                 {{possible_spending}} (tx fee included)
