--- a/src/templates/partials/tx_details.html
+++ b/src/templates/partials/tx_details.html
@@ -55,7 +55,7 @@
     </table>
 
 
-  <h3>{{outputs_no}} output(s) for total of {{outputs_xmr_sum}} GLDX</h3>
+  <h3>{{outputs_no}} output(s) for total of {{outputs_xmr_sum}} CRFI</h3>
   <div class="center">
       <table class="center">
           <tr>
@@ -139,7 +139,7 @@
     {{/enable_mixins_details}}
 
     {{^inputs_xmr_sum_not_zero}}
-        <h3>{{inputs_no}} input(s) for total of {{inputs_xmr_sum}} GLDX</h3>
+        <h3>{{inputs_no}} input(s) for total of {{inputs_xmr_sum}} CRFI</h3>
     {{/inputs_xmr_sum_not_zero}}
     {{#inputs_xmr_sum_not_zero}}
         {{^have_any_unknown_amount}}
