--- a/src/templates/index2.html
+++ b/src/templates/index2.html
@@ -48,7 +48,7 @@
 
     {{#emission}}
         <h3 style="font-size: 12px; margin-top: 2px">
-            Goldnero emission (fees) is {{amount}} ({{fee_amount}}) as of {{blk_no}} block
+            Crystaleum emission (fees) is {{amount}} ({{fee_amount}}) as of {{blk_no}} block
         </h3>
     {{/emission}}
 
