--- a/src/templates/my_outputs.html
+++ b/src/templates/my_outputs.html
@@ -68,12 +68,12 @@
         </table>
 
         <h3>
-            Sum GLDX from matched outputs (i.e., incoming GLDX):
+            Sum CRFI from matched outputs (i.e., incoming CRFI):
             {{#found_our_outputs}}
                 {{sum_xmr}}
             {{/found_our_outputs}}
             {{^found_our_outputs}}
-                0.00
+                0.000000000000
             {{/found_our_outputs}}
         </h3>
         <h4>
@@ -141,7 +141,7 @@
 
         </div>
         <h3>
-            Sum GLDX from matched and marked by * ring member's outputs: {{sum_mixin_xmr}}
+            Sum CRFI from matched and marked by * ring member's outputs: {{sum_mixin_xmr}}
             <br/>
             <span style="font-size: 16px"> Possible spending is:
                 {{possible_spending}} (tx fee included)
